--- a/.github/workflows/gds.yaml
+++ b/.github/workflows/gds.yaml
@@ -26,17 +26,7 @@ jobs:
       - name: Run Tiny Tapeout Precheck
         uses: TinyTapeout/tt-gds-action/precheck@tt09
 
-  gl_test:
-    needs: gds
-    runs-on: ubuntu-24.04
-    steps:
-      - name: checkout repo
-        uses: actions/checkout@v4
-        with:
-          submodules: recursive
-
-      - name: GL test
-        uses: TinyTapeout/tt-gds-action/gl_test@tt09
+  # Remove GL test for now as the HS library functional cells are broken.
 
   viewer:
     needs: gds
